--- a/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.css
+++ b/src/openhdwebui.client/src/app/nav-menu/nav-menu.component.css
@@ -5,6 +5,36 @@
   color: var(--primary-color);
 }
 
+.navbar-toggler {
+  border: 1px solid color-mix(in srgb, var(--nav-text-color) 30%, transparent);
+}
+
+.navbar-toggler-icon {
+  display: block;
+  width: 22px;
+  height: 2px;
+  background-color: var(--nav-text-color);
+  position: relative;
+}
+
+.navbar-toggler-icon::before,
+.navbar-toggler-icon::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--nav-text-color);
+}
+
+.navbar-toggler-icon::before {
+  top: -6px;
+}
+
+.navbar-toggler-icon::after {
+  top: 6px;
+}
+
 html {
   font-size: 14px;
 }
@@ -16,4 +46,32 @@ html {
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+@media (max-width: 575.98px) {
+  .navbar-collapse {
+    width: 100%;
+    padding: 0.75rem 0;
+    display: none;
+  }
+
+  .navbar-collapse.show {
+    display: block;
+  }
+
+  .navbar-nav {
+    flex-direction: column;
+    gap: 0.35rem;
+  }
+
+  .navbar-nav .nav-link {
+    padding: 0.4rem 0.65rem;
+    border-radius: 0.6rem;
+  }
+
+  .form-check.form-switch {
+    margin-left: 0;
+    padding-left: 0;
+    margin-top: 0.5rem;
+  }
 }
